--- a/index.html
+++ b/index.html
@@ -12,29 +12,30 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html"> Home</a>
+                    <a href="index.html"> Home</a></li>
                 <li>
-                    <a href="bontonaboutus.html">About Us</a>
+                    <a href="bontonaboutus.html">About Us</a></li>
                 <li>
-                    <a href="index.html">Where To Find Us</a>
+                    <a href="index.html">Where To Find Us</a></li>
                 <li>
-                    <a href="index.html">How We Make it</a>
+                    <a href="index.html">How We Make it</a></li>
+            </ul>
         </nav>
         <section>
                 <p>
-                    Bon Ton Pops are the <a href="https://www.popsicle.com/"</a>Bomb</a>! Uniquiely curated from locally sourced ingridents. Custimozed to meet your varying interest.
+                    Bon Ton Pops are the <a href="https://www.popsicle.com/"</a>Bomb</a>! Uniquiely curated from locally sourced ingridents. Customized to meet your varying interest.
                 </p>
                 <article>
                     <h2>Locally Sourced</h2>
-                    <img src="strawberry.png"><img>
+                    <img src="/Users/mrwendle/Documents/Projects/Locally-sourced-food-1.jpg"><img>
                     <p>Utilizing ingredients from local farmers</p> 
                 <article>
                     <h2>Unique Shapes</h2>
-                    <img src="strawberry.png"><img>
+                    <img src="/Users/mrwendle/Documents/Projects/Best-popsicle-molds.jpg"><img>
                     <p>Customized Shapes to meet your needs</p>
                 <article>
                     <h2>Unique Flavors</h2>
-                    <img src="strawberry.png"><img>
+                    <img src="/Users/mrwendle/Documents/Projects/1C5A2919-1024x682.jpg"><img>
                     <p>Customized Flavors to meet your needs</p>   
         </section>
 </body>  
